Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignIntObjNumberField.quorum
class Main
    Integer int
    int = cast(Integer, 7.5)
    action main
        if int:GetValue() = 7
            output "passed"
        end
    end
end