Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBooleanIntObjWrapped.quorum
class main
    action Main
        Integer int
        int:setValue(5)
        boolean b = int
    end
end